Added sessionStorage BowserState
cus why simply check if exists ¯\_(ツ)_/¯

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ yarn-error.log*
 # unfinished
 /src/components/HeroTest.js
 /src/components/Default.js
+/src/components/sections/old-SessionTester.js
